Fix of css responsive overflow error

--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -69,5 +69,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        margin-bottom: 0;
+
     }
 }
