--- a/components/imageSection/ImageSection.module.css
+++ b/components/imageSection/ImageSection.module.css
@@ -1,7 +1,7 @@
 .section1 {
     background: url('./../../public/image1.png') no-repeat center center fixed;
     width: 100%;
-    height: calc(100vh - 20px);
+    height: 110vh;
     margin-bottom: 0;
 }
 
@@ -31,6 +31,9 @@
 
 @media (max-width: 450px) {
     .divprincipal {
-        margin-top: 5px;
+        margin-top: 0;
+    }
+    .section {
+        height: 100vh;
     }
 }
